examples/legacy/invalid_scl/unbound_2.scl
rel path(a, c) = edge(a, b) \/ edge(a, c)
